[package]
name = "BaseBuster"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true


[dependencies]
alloy = { version = "0.2.0", features = ["full", "node-bindings", "rpc-types-trace", "rpc-client", "rpc-types-debug", "providers"] }
anyhow = "1.0.86"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["full"] }
alloy-chains = {git = "https://github.com/alloy-rs/chains" }
alloy-sol-types = { version = "0.7.7" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy" }
dotenv = "0.15.0"
pool-sync = { path = "../PoolSync" }
variant_count = "1.1.0"
hex-literal = "0.4.1"
rayon = "1.10.0"
petgraph = "0.6.5"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rustc-hash = "2.0.0"
revm = { version = "12.1.0", features = ["alloydb"] }
portpicker = "0.1.1"
bigint = "4.4.3"
gweiyser = "0.1.3"
uniswap_v3_math = "0.5.1"
crossbeam-queue = "0.3.11"
dashmap = "6.0.1"
