[package]
name = "BaseBuster"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true


[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
dotenv = "0.15.0"
pool-sync = { path = "../PoolSync" }
rayon = "1.10.0"
petgraph = "0.6.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rustc-hash = "2.0.0"
dashmap = "6.1.0"
sha2 = "0.10.8"
zerocopy = "0.7.35"
reth-chainspec = {git = "https://github.com/paradigmxyz/reth.git" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git" } 
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" } 
reth-node-optimism = { git = "https://github.com/paradigmxyz/reth.git" } 
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git" } 
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git"}
reth = { git = "https://github.com/paradigmxyz/reth.git"}
alloy = { version = "0.3.1", features = ["full", "node-bindings", "rpc-types-trace", "rpc-client", "rpc-types-debug", "providers"] }
tokio = { version = "1.39.3", features = ["full"] }
revm = {version = "14.0.1", features = ["alloydb"]}
uniswap_v3_math = { path = "../uniswap-v3-math" }
