[package]
name = "BaseBuster"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true


[dependencies]
alloy = { version = "0.4.2", features = ["full", "node-bindings", "providers", "rpc-client", "rpc-types-debug", "rpc-types-trace"] }
anyhow = "1.0.89"
env_logger = "0.11.5"
futures = "0.3.31"
pool-sync = { path = "../PoolSync" }
node-db = { path = "../node-db"}
log = "0.4.22"
petgraph = "0.6.5"
rayon = "1.10.0"
revm = {git = "https://github.com/bluealloy/revm" }
revm-database = { git = "https://github.com/bluealloy/revm", package = "revm-database", features = ["alloydb"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
sha2 = "0.10.8"
dashmap = "6.1.0"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
uniswap_v3_math = { path = "../uniswap-v3-math" } 
dotenv = "0.15.0"
reqwest = "0.12.8"
zerocopy = "0.8.6"
rustc-hash = "2.0.0"
alloy-eips = "0.4.2"
